<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

  <!--
    LOI DATA FORMS
  -->

  <!-- Shown below fields that are required but left empty (TBD). -->
  <string name="required_task">This field is required</string>

  <!--
    LOCATION (GPS/CELL/WIFI) UPDATE ERROR MESSAGES
  -->

  <!-- Shown when user has refused to grant app fine grained location permission. -->
  <string name="no_fine_location_permissions">Cannot show current location without permission</string>
  <!-- Shown when an unknown error occurs obtaining fine grained location permission. -->
  <string name="location_updates_unknown_error">Failed to enable location updates</string>
  <!-- Shown when user has refused to enable location services in settings.-->
  <string name="location_disabled_in_settings">Please enable location in system settings</string>

  <string name="map_view">Map view</string>
  <string name="unexpected_error">An unexpected error has occurred</string>
  <string name="survey_load_timeout_error">Survey loading timed out. Please check your connection and try again.</string>
  <string name="google_api_install_failed">Google Play Services installation failed</string>
  <string name="sign_out">Sign out</string>
  <string name="ok">OK</string>
  <string name="add_data">Add data</string>

  <!-- Untranslated strings -->
  <string name="offline_area_selector">Select area to download</string>
  <string name="offline_area_selector_prompt">Select a base map for offline use</string>
  <string name="offline_area_selector_download">Download</string>
  <string name="camera">Camera</string>
  <string name="photo_preview">Preview</string>
  <string name="settings">Settings</string>
  <string name="offline_area_viewer_title">Downloaded area</string>
  <string name="offline_area_viewer_remove_button">Remove from device</string>
  <string name="offline_area_download_error">Download failed. Please try again</string>
  <!-- Label of button used enter the offline area selector. -->
  <string name="offline_area_selector_select">Select area</string>
  <string name="no_basemaps_downloaded">No map imagery downloaded for offline use</string>
  <string name="connect_to_download_message">You are offline. Connect to download offline map images</string>
  <string name="signing_in">Signing in</string>
  <string name="sign_in_with_google">Sign in with Google</string>
  <!-- Precedes the build number shown in the side menu of debug builds. -->
  <string name="build">Build %s</string>

  <string name="tos_title">Terms of service</string>
  <string name="agree_terms">Agree</string>
  <string name="agree_checkbox">I agree</string>
  <!-- Other strings (to be organized) -->
  <string name="sync_status">Data sync status</string>

  <string name="add_point">Add point</string>
  <string name="complete_polygon">Complete</string>

  <string name="road_map">Road map</string>
  <string name="satellite">Satellite</string>
  <string name="terrain">Terrain</string>
  <string name="next">Next</string>
  <string name="done">Done</string>
  <string name="skip">Skip</string>

  <string name="drop_pin">Drop pin</string>
  <string name="add_site">Add a site</string>
  <string name="job_site_icon">Job site icon</string>
  <string name="drop_a_pin_tooltip_text">Drag your map until the center pin is on the desired location</string>
  <string name="current_location">Current location:</string>
  <string name="loading">Loading…</string>
  <string name="no_tasks_error">This job has no more tasks to complete</string>
  <string name="invalid_data_sharing_terms">This survey is misconfigured (no data sharing terms available). Please contact the survey organizer.</string>
  <string name="collect_data_viewer_error">Can’t collect data as user is a VIEWER</string>
  <string name="offline_map_imagery">Offline map imagery</string>
  <string name="offline_map_imagery_no_areas_downloaded_image">No Imagery Downloaded</string>
  <string name="offline_map_imagery_pref_description">Hide or show downloaded imagery</string>
  <string name="layers">Layers</string>
  <string name="base_map">Base map</string>
  <string name="offline_map_imagery_download_progress_dialog_title">Downloading - %d%%</string>
  <string name="offline_map_imagery_download_progress_dialog_message">Download times may vary depending on the size of the selected area and your internet connection.</string>
  <string name="multiple_regions">Multiple regions</string>
  <string name="permission_denied">Permission denied</string>
  <string name="close_app">Close app</string>
  <string name="cancel">Cancel</string>
  <string name="save">Save</string>
  <string name="no_imagery_available_for_area">No imagery for this area. Select an area with imagery to download to your device.</string>
  <string name="selected_offline_area_size">The selected area may take up to %s\u00A0MB of space on your device</string>
  <string name="selected_offline_area_too_large">Zoom in and select a smaller area to download to your device</string>
  <string name="offline_area_size_loading_symbol">…</string>
  <string name="offline_area_select_cancel_button">Cancel</string>
  <string name="offline_area_selector_title">Download this area?</string>
  <string name="capture">Capture</string>
  <string name="surveys">Surveys</string>
  <string name="offline_icon_description">Icon shown when the survey is available offline</string>
  <string name="more_options_icon_description">More options</string>
  <string name="remove_offline_access_warning_title">Warning</string>
  <string name="remove_offline_access_warning_confirm_button">Remove</string>
  <string name="remove_offline_access_warning_dialog_body">If you remove offline access:\n \u2022 Any unsynced data will be discarded\n\nAre you sure you want to remove the offline access?</string>
  <string name="unnamed_point">Unnamed point</string>
  <string name="unnamed_area">Unnamed area</string>
  <string name="unnamed_job">Unnamed Job</string>
  <string name="offline_area_size_on_disk_mb">%s\u00A0MB on disk</string>
  <string name="offline_area_list_item_size_on_disk_mb">%s\u00A0MB</string>
  <string name="offline_downloaded_areas">Downloaded areas</string>
  <string name="offline_area_list_tip">Available for offline viewing</string>
  <string name="offline_area_list_item_icon">Offline area list item icon</string>
  <string name="no_surveys_available">No surveys available. Contact your survey organizer to get access.</string>
  <string name="previous">Previous</string>
  <string name="network_error_when_signing_in">Connect to the internet to sign in</string>
  <string name="camera_permissions_needed">You need to grant this application camera permissions to submit photos.</string>
  <string name="camera_launch_failed_title">Camera Error</string>
  <string name="camera_launch_failed_desc">Failed to open the camera. Please try again.</string>
  <string name="photo_save_failed_title">Save Error</string>
  <string name="photo_save_failed_desc">Failed to save the captured photo. Please try again.</string>
  <string name="incomplete_area">Incomplete area</string>
  <string name="initializing">Initializing…</string>
  <string name="draw_area_task_instruction">Move the map and tap “Add point” to add points around the desired area.</string>
  <string name="close">Close</string>
  <string name="data_consent_dialog_title">Data sharing agreement</string>
  <string name="map_location">Map location:</string>
  <string name="sign_out_dialog_title">Signout warning</string>
  <string name="sign_out_dialog_body">If you sign out:\n \u2022 Any unsynced data will be discarded\n \u2022 You won&#8217;t be able to sign in if you&#8217;re offline\n \u2022 Offline surveys won&#8217;t be available until you sign in again\n\nAre you sure you want to sign out?</string>
  <string name="read_only_data_collection_hint">Survey is read-only</string>
  <string name="no_submissions">No submissions</string>
  <string name="dismiss_info_popup">Dismiss</string>
  <plurals name="submission_count">
    <item quantity="one">%d submission</item>
    <item quantity="other">%d submissions</item>
  </plurals>
  <string name="loi_name_dialog_title">Name this location</string>
  <string name="loi_name_dialog_body">A new data collection site will be created.</string>
  <string name="current_survey">Current survey</string>
  <string name="switch_survey">Switch survey</string>
  <string name="no_survey_selected">No survey selected</string>
  <string name="undo">Undo</string>
  <string name="redo">Redo</string>
  <string name="view_licenses_title">Licenses</string>
  <string name="about">About</string>
  <string name="terms_of_service">Terms of service</string>
  <string name="about_ground">Ground is an open-source community project built by Google and FAO under the Forest Data Partnership with help from SIG, Ecam, and open-source community contributors. \n\nIt is licensed under the <annotation type="apache_license">Apache License, Version 2.0</annotation>. \n\nView other <annotation type="all_licenses">Licenses</annotation></string>
  <string name="pending_retry">Pending retry</string>
  <string name="uploaded">Uploaded</string>
  <string name="uploading_form_data">Uploading form data</string>
  <string name="pending">Pending</string>
  <string name="photos_pending">Photos pending</string>
  <string name="photos_pending_retry">Photos pending retry</string>
  <string name="uploading_photos">Uploading photos</string>
  <string name="data_sync_status">Data sync status</string>
  <string name="signout_warning">If you sign out, all unsaved data will be lost.</string>
  <string name="admin_request_access">To continue, contact your system administrator to request access.</string>
  <string name="signup_request_access">To continue, <annotation type="sign_up_link">sign up to request access</annotation>.</string>

  <!-- Settings -->
  <string name="general_title">General</string>
  <string name="upload_media_title">Upload photos</string>
  <string name="over_wifi_summary">Over Wi-Fi only</string>
  <string name="help_title">Help</string>
  <string name="visit_website_title">Visit website</string>
  <string name="accuracy">Accuracy:</string>
  <string name="select_language_title">Select language</string>
  <!-- Data Sharing Consent Text -->
  <string name="data_sharing_no_terms">*No terms to display.*</string>
  <string name="data_sharing_private_message">
    ## Private data sharing
    \nData will only be shared with survey organizers, who may not share and use collected data publicly.
  </string>
  <string name="data_sharing_public_message">
    ## Public data sharing
    \nSurvey organizers may share and use data publicly under the *Creative Commons CC0 1.0 License*:
  </string>
  <string name="draft_restored">Unsaved data restored</string>
  <string name="load_tos_failed">Could not connect, try again later</string>
  <string name="data_collection_complete">Data collection complete!</string>
  <string name="data_collection_complete_details">Your data has been saved and will be automatically synced when you’re online.</string>

  <string name="allow_location_confirmation">Allow location</string>
  <string name="allow_location_title">Allow location sharing</string>
  <string name="allow_location_description">If you don&#8217;t allow Ground to access this device&#8217;s location, you won&#8217;t be able to continue collecting data for this site.</string>

  <string name="data_collection_cancellation_title">Stop collecting data?</string>
  <string name="data_collection_cancellation_description">If you exit, data you haven&#8217;t submitted yet will be discarded.</string>
  <string name="data_collection_cancellation_confirm_button">Confirm</string>
  <string name="something_went_wrong">Something went wrong</string>

  <string name="polygon_vertex_add_dialog_title">Invalid area</string>
  <string name="polygon_vertex_add_dialog_message">Area perimeter can&#8217;t intersect with itself</string>
  <string name="polygon_vertex_add_dialog_positive_button">OK</string>
  <string name="clear">Clear</string>
  <string name="text_task_data_character_limit">255 characters max</string>

  <string name="area_message">Area: %s</string>

  <string name="access_restricted">Restricted</string>
  <string name="access_unlisted">Unlisted</string>
  <string name="access_public">Public</string>

  <string name="section_on_device">On this device</string>
  <string name="section_shared_with_me">Shared with me</string>
  <string name="section_public">Public</string>

  <string name="dialog_title_update_required">Update Required</string>
  <string name="dialog_message_update_required">A new version of the app is available. Please update to continue using the app.</string>
  <string name="dialog_button_update">Update</string>

  <string name="select_length_title">Select units</string>
  <string name="length_metric">Metric</string>
  <string name="length_imperial">Imperial</string>

  <string name="delete_site">Delete site</string>
  <string name="delete_site_dialog_title">Delete site?</string>
  <string name="delete_site_dialog_message">This site and all associated data will be permanently deleted. This action cannot be undone.</string>
  <string name="delete">Delete</string>

  <string name="location_not_accurate_heading">Your location is not accurate</string>
  <string name="location_not_accurate_description">Try standing still or waiting for a more accurate position</string>

  <string name="recenter">Re-center</string>
  <string name="share_location">Share location</string>

  <string name="join_survey">Join survey</string>
  <string name="invalid_survey_qr_code">Unrecognized survey QR code</string>
  <string name="join_survey_confirm_title">Join survey?</string>
</resources>
