...
@Composable
@Preview(showBackground = true)
@ExcludeFromJacocoGeneratedReport
private fun PreviewSurveyList() {
  val dummySurveys =
    listOf(
      SurveyListItem("1", "Tree Survey", "Track tree growth", true, Survey.GeneralAccess.PUBLIC),
      SurveyListItem(
        "2",
        "Water Survey",
        "Check water quality",
        false,
        Survey.GeneralAccess.RESTRICTED,
...
